fix misaligned card logo

--- a/src/scss/components/_card-front.scss
+++ b/src/scss/components/_card-front.scss
@@ -12,7 +12,7 @@
   background-image: url(../img/card-logo.svg), url(../img/bg-card-front.webp);
   background-repeat: no-repeat, no-repeat;
   background-size: 50px, contain;
-  background-position: 2.5rem 2.5rem, 0 0;
+  background-position: 2.1rem 2.1rem, 0 0;
   box-shadow: 0 28px 25px -15px v.$light-grayish-violet;
 
   &__card-number {
